; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-x264/extr_obs-x264.c_validate_preset.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-x264/extr_obs-x264.c_validate_preset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_x264 = type { i32 }

@.str = private unnamed_addr constant [7 x i8] c"preset\00", align 1
@x264_preset_names = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [9 x i8] c"veryfast\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.obs_x264*, i8*)* @validate_preset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @validate_preset(%struct.obs_x264* %0, i8* %1) #0 {
  %3 = alloca %struct.obs_x264*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store %struct.obs_x264* %0, %struct.obs_x264** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.obs_x264*, %struct.obs_x264** %3, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = load i32, i32* @x264_preset_names, align 4
  %9 = call i8* @validate(%struct.obs_x264* %6, i8* %7, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 %8)
  store i8* %9, i8** %5, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %12, label %14

12:                                               ; preds = %2
  %13 = load i8*, i8** %5, align 8
  br label %15

14:                                               ; preds = %2
  br label %15

15:                                               ; preds = %14, %12
  %16 = phi i8* [ %13, %12 ], [ getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), %14 ]
  ret i8* %16
}

declare dso_local i8* @validate(%struct.obs_x264*, i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
